tests/invalid/integer_literal_overflow.ar
// errc: 9
fn main()
{
    const a: u8 = 256;
    const b: u16 = 65536;
    const c: u32 = 4294967296;
    const d: u64 = 18446744073709551616;
    const f: i8 = 128;
    const g: i16 = 32768;
    const h: i32 = 2147483648;
    const i: i64 = 9223372036854775808;
    const k = 2147483648;
}
